--- a/vector.html
+++ b/vector.html
@@ -53,7 +53,8 @@
 					<div id="main">
 						<div class="inner">
 							<h1>Vector Map</h1>
-							<span class="image main"><img src="images/pic13.jpg" alt="" /></span>
+							<span class="image main"><img src="images/Hotspot.jpg" alt="" /></span>
+							<span class="image main"><img src="images/buffer20.jpg" alt="" /></span>
 							<p> Add vector map assignment here</p>
 							
 						</div>
