--- a/landuse.html
+++ b/landuse.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+ <!DOCTYPE HTML>
 <!--
 	Phantom by HTML5 UP
 	html5up.net | @ajlkn
@@ -53,8 +53,10 @@
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<h1>Digital Elevation Models</h1>
-							<span class="image main"><img src="images/linge_red_blue.png" alt="" /></span>
+							<h1>Lane Use Maps</h1>
+							<span class="image main"><img src="images/Supervised_object_based\-classification.png" alt="" /></span>
+							<span class="image main"><img src="images/Unsupervised_object_based\-classification.png" alt="" /></span>
+							<span class="image main"><img src="images/NDVI_new.png" alt="" /></span>
 														<p>I made this map following a lab assignment. include relevant information from your assignment here.</p>
 						
 						</div>
