--- a/landuse.html
+++ b/landuse.html
@@ -54,8 +54,8 @@
 					<div id="main">
 						<div class="inner">
 							<h1>Lane Use Maps</h1>
-							<span class="image main"><img src="images/Supervised_object_based\-classification.png" alt="" /></span>
-							<span class="image main"><img src="images/Unsupervised_object_based\-classification.png" alt="" /></span>
+							<span class="image main"><img src="images/Supervised_object_based_classification.png" alt="" /></span>
+							<span class="image main"><img src="images/Unsupervised_object_based_classification.png" alt="" /></span>
 							<span class="image main"><img src="images/NDVI_new.png" alt="" /></span>
 														<p>I made this map following a lab assignment. include relevant information from your assignment here.</p>
 						
