--- a/gee.html
+++ b/gee.html
@@ -53,7 +53,8 @@
 					<div id="main">
 						<div class="inner">
 							<h1>Carbon Sequestration</h1>
-							<span class="image main"><img src="images/linge_red_blue.png" alt="" /></span>
+							<span class="image main"><img src="images/GPP.png" alt="" /></span>
+							<span class="image main"><img src="images/ACD.png" alt="" /></span>
 														<p>place holder for this assignment.</p>
 						
 						</div>
