--- a/gee.html
+++ b/gee.html
@@ -69,7 +69,7 @@
 								<ul class="icons">
 									
 									<li><a href="https://github.com/bricker0" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
-									<li><a href="https://danilovnichita.users.earthengine.app/view/carbon-sequestration-around-utrecht" class="icon brands style2 fa-google"><span class="label">500px</span></a></li>
+									<li><a href="https://danilovnichita.users.earthengine.app/view/carbon-sequestration-around-utrecht" class="icon brands style2 fa-google-earth"><span class="label">500px</span></a></li>
 									<li><a href="#" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
 								</ul>
 							</section>
