--- a/gee.html
+++ b/gee.html
@@ -54,9 +54,12 @@
 						<div class="inner">
 							<h1>Carbon Sequestration</h1>
 							<span class="image main"><img src="images/GPP.png" alt="" /></span>
+							
 							<span class="image main"><img src="images/ACD.png" alt="" /></span>
-														<p>place holder for this assignment.</p>
-						
+														<p>Check out my app here</p>
+							<ul class = "icons">
+							<li><a href="https://danilovnichita.users.earthengine.app/view/carbon-sequestration-around-utrecht" class="icon brands style2 fa-google"><span class="label">500px</span></a></li>
+							</ul>
 						</div>
 					</div>
 
