--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 							<!-- Logo -->
 								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/icon.png" alt="" /></span><span class="title">Testing</span>
+									<span class="symbol"><img src="images/icon.png" alt="" /></span><span class="title">My GIS Portfolio</span>
 								</a>
 
 							<!-- Nav -->
@@ -53,9 +53,9 @@
 					<div id="main">
 						<div class="inner">
 							<header>
-								<h1>This is Phantom, a free, fully responsive site<br />
-								template designed by <a href="http://html5up.net">HTML5 UP</a>.</h1>
-								<p>You may use this as the template for your website. Change this one</p>
+								<h1>This is a collection of proejects I made <br />
+								as part of my introduction to GIS course</h1>
+								<p>Click on the different boxes to find out more about my projects</p>
 							</header>
 							<section class="tiles">
 								<article class="style1">
@@ -63,7 +63,7 @@
 										<img src="images/pic01.jpg" alt="" />
 									</span>
 									<a href="choropleth.html">
-										<h2>Mapping for a Sustainable World</h2>
+										<h2>Mapping prevalence of food insecurity in the world</h2>
 										<div class="content">
 											<p>Choropleth Maps - both static and interactive.</p>
 										</div>
@@ -71,10 +71,10 @@
 								</article>
 								<article class="style2">
 									<span class="image">
-										<img src="images/sat.png" alt="" />
+										<img src="images/buch.png" alt="" />
 									</span>
 									<a href="landuse.html">
-										<h2>Land Use</h2>
+										<h2>Land Use in Bucharest</h2>
 										<div class="content">
 											<p>Supervised and Unsupervised classification from Earth Observation Data</p>
 										</div>
@@ -98,7 +98,7 @@
 									<a href="DEM.html">
 										<h2>Digital Elevation Models</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Digital Terrain and Surface Models of De Maas River in De Beneeden </p>
 										</div>
 									</a>
 								</article>
