--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 								</article>
 								<article class="style2">
 									<span class="image">
-										<img src="images/buch.png" alt="" />
+										<img src="images/buch.jpg" alt="" />
 									</span>
 									<a href="landuse.html">
 										<h2>Land Use in Bucharest</h2>
@@ -98,7 +98,8 @@
 									<a href="DEM.html">
 										<h2>Digital Elevation Models</h2>
 										<div class="content">
-											<p>Digital Terrain and Surface Models of De Maas River in De Beneeden </p>
+											<p>Digital Terrain and Surface Models of <br />
+												De Maas River in De Beneeden </p>
 										</div>
 									</a>
 								</article>
@@ -109,7 +110,8 @@
 									<a href="gee.html">
 										<h2>Carbon Sequestration</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Mapping Above Ground Carbon Density and GPP<br />
+											using Earth Observation data</p>
 										</div>
 									</a>
 								</article>
@@ -120,7 +122,8 @@
 									<a href="vector.html">
 										<h2>Vector Data</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Spatial Analysis of political propaganda<br />
+												in Utrecht centrum</p>
 										</div>
 									</a>
 								
