--- a/index.html
+++ b/index.html
@@ -55,6 +55,16 @@
 							<header>
 								<h1>This is a collection of proejects I made <br />
 								as part of my introduction to GIS course</h1>
+								<p>GIS stands for Geographical Information System and is a type of technology used for integrating 
+									all types of data into maps to reveal certain things about a specific place.
+									This computer system is part of a bigger study called Geographical Information Science,
+									which is a at the root of the tools and technologies used in making sense of the physical world. </p>
+
+									<p>The power and relevance of GIS are increasing by day, as for example carbon sequestration models 
+									become crucial in mitigating climate change, or as mapping areas at risk of extreme climate phenomena becomes
+									a necessity for survival. GIS is ubiquitous in today’s world and is an integral part of our lives, 
+									whether through its crucial role in navigation, food deliveries, weather forecasts, running trackers. </p>
+
 								<p>Click on the different boxes to find out more about my projects</p>
 							</header>
 							<section class="tiles">
