--- a/choropleth.html
+++ b/choropleth.html
@@ -77,7 +77,17 @@
 					<div id="main">
 						<div class="inner">
 							<h1>Choropleth Map</h1>
-							<p>Describe the map - SDG here.</p>
+							<p>
+General info:
+
+A choropleth map uses varying colour intensities to show how data differs across countries or regions, offering a clear visual of global patterns. Its strength lies in highlighting regional trends, but it assumes uniform distribution within each area, which can distort reality. It may also mislead if regions differ greatly in size or population, or if similar colours suggest similar conditions despite differing contexts.
+
+
+Info about map:
+
+This map shows how severely different countries experience food insecurity, measured by the prevalence of undernourishment. Darker colours indicate lower risk, while lighter colours show higher risk of not having access to enough food.
+The data, collected by the UN for Sustainable Development Goal 2.1, aims to end hunger and ensure universal access to safe, nutritious, and sufficient food. The Prevalence of Undernourishment (PoU) is calculated using household surveys, food balance sheets, and demographic data. Despite limitations, it remains a reliable global indicator of hunger trends.
+</p>
 							<span class="image main"><img src="images/poster_updated_version.png" alt="" /></span>
 							
 							<h1>Leaflet</h1>
