--- a/choropleth.html
+++ b/choropleth.html
@@ -78,12 +78,13 @@
 						<div class="inner">
 							<h1>Choropleth Map</h1>
 							<p>
-General info:
+<p>General info:</p>p
+<p></p>p
+<p>A choropleth map uses varying colour intensities to show how data differs across countries or regions, offering a clear visual of global patterns. Its strength lies in highlighting regional trends, but it assumes uniform distribution within each area, which can distort reality. It may also mislead if regions differ greatly in size or population, or if similar colours suggest similar conditions despite differing contexts.</p>
 
-A choropleth map uses varying colour intensities to show how data differs across countries or regions, offering a clear visual of global patterns. Its strength lies in highlighting regional trends, but it assumes uniform distribution within each area, which can distort reality. It may also mislead if regions differ greatly in size or population, or if similar colours suggest similar conditions despite differing contexts.
 
-
-Info about map:
+<p>Info about map:</p>
+<p></p>							
 
 This map shows how severely different countries experience food insecurity, measured by the prevalence of undernourishment. Darker colours indicate lower risk, while lighter colours show higher risk of not having access to enough food.
 The data, collected by the UN for Sustainable Development Goal 2.1, aims to end hunger and ensure universal access to safe, nutritious, and sufficient food. The Prevalence of Undernourishment (PoU) is calculated using household surveys, food balance sheets, and demographic data. Despite limitations, it remains a reliable global indicator of hunger trends.
@@ -223,10 +224,10 @@ The data, collected by the UN for Sustainable Development Goal 2.1, aims to end 
 </script>
 						<!-- extra credit - make your own esri online map- otherwise delete this section -->
 						<h1>ArcGIS Online</h1>
-							<p>
-Skills acquired: 
+							
+<p>Skills acquired:</p> 
 
-In making this map, I learned how to manipulate large amounts of quantitative data on Excel in order to integrate it into a map which enables clear visual comparisons between countries in the world. I also learned how to emphasise specific areas of interest of the map, especially those which correlate with the highest numbers in the data set. Also importantly, I learned how to transform the map into a poster, by embellishing it and adding necessary information like labels, legend, titles to guide the reader.  
+<p>In making this map, I learned how to manipulate large amounts of quantitative data on Excel in order to integrate it into a map which enables clear visual comparisons between countries in the world. I also learned how to emphasise specific areas of interest of the map, especially those which correlate with the highest numbers in the data set. Also importantly, I learned how to transform the map into a poster, by embellishing it and adding necessary information like labels, legend, titles to guide the reader.  
 </p>
 						<iframe src="https://uni-utrecht.maps.arcgis.com/apps/instant/basic/index.html?appid=e0472c006c72436fbd8a6be0b1814603" width="100%" height="800px" frameborder="0" style="border:0" allowfullscreen>iFrames are not supported on this page.</iframe>
 						
