--- a/choropleth.html
+++ b/choropleth.html
@@ -78,12 +78,12 @@
 						<div class="inner">
 							<h1>Choropleth Map</h1>
 							<p>
-<p>General info:</p>p
-<p></p>p
+<h2>General info:</h2>
+<p></p>
 <p>A choropleth map uses varying colour intensities to show how data differs across countries or regions, offering a clear visual of global patterns. Its strength lies in highlighting regional trends, but it assumes uniform distribution within each area, which can distort reality. It may also mislead if regions differ greatly in size or population, or if similar colours suggest similar conditions despite differing contexts.</p>
 
 
-<p>Info about map:</p>
+<h2>Info about map:</h2>
 <p></p>							
 
 This map shows how severely different countries experience food insecurity, measured by the prevalence of undernourishment. Darker colours indicate lower risk, while lighter colours show higher risk of not having access to enough food.
