--- a/choropleth.html
+++ b/choropleth.html
@@ -223,9 +223,9 @@ The data, collected by the UN for Sustainable Development Goal 2.1, aims to end 
 
 </script>
 						<!-- extra credit - make your own esri online map- otherwise delete this section -->
-						<h2>Skills acquired/h2>
+						<h2>Skills acquired</h2>
 							
-<p>Skills acquired:</p> 
+
 
 <p>In making this map, I learned how to manipulate large amounts of quantitative data on Excel in order to integrate it into a map which enables clear visual comparisons between countries in the world. I also learned how to emphasise specific areas of interest of the map, especially those which correlate with the highest numbers in the data set. Also importantly, I learned how to transform the map into a poster, by embellishing it and adding necessary information like labels, legend, titles to guide the reader.  
 </p>
