--- a/DEM.html
+++ b/DEM.html
@@ -53,9 +53,25 @@
 					<div id="main">
 						<div class="inner">
 							<h1>Digital Elevation Models</h1>
+							<h2>General info:</h2>
+							<p>DEM is an umbrella term that stands for Digital Elevation Models and its a way of assessing characteristics of the surface of Earth through an active sensor (LiDAR) that measures the elevation of the landscape. This is done by calculating the time it takes for a laser to be reflected from the ground after its shot from air. I decided to apply two types of DEM’s to De Merwede region, which is part of the port of Rotterdam. This area is both interesting geographically due to the flow of the river into the North Sea as well as the massive infrastructure developments which it experienced due to maritime trade. </p>
+							<p></p>
+							<h1>Digital Surface Model</h1>
+							<p>
+This map is a Digital Surface Model (DSM’s) which shows the urban sprawl surrounding the river De Maas. DSM’s are computed from the distance between the smallest distance between the ground and the point of emission of the laser.
+</p>
+							<p></p>
+							<p>This DSM shows clearly the expansive development of human infrastructure in a port area, that is a hub of international trade. The bright pink was used to emphasise the sheer concentration of built infrastructure on the sides of the river as well as a connecting web of routes such as streets and highways that cross through the region, which are also an indicator of substantial movement of people and traffic of goods.</p>
+
 							<span class="image main"><img src="images/DSM_print_actual.png" alt="" /></span>
+							<h1>Digital Terrain Model</h1>
+							<p>This Digital Terrain Model only accounts for the longest time it takes the laser to travel from the ground to the sensor and so it highlights the features of the physical landscape, which although flat, is marked by high elevation points on the border of the river. This makes sense, given vast territories in the North of the Netherlands lie beneath the sea level.</p>
 							<span class="image main"><img src="images/DTM_print_actual.png" alt="" /></span>
 							<span class="image main"><img src="images/True_colour_print_actual.png" alt="" /></span>
+							<h2>Skills acquired</h2>
+							<p>This project enabled me to learn how to look for DEM’s online and how to merge different images into one singular picture that is the area of interest. I learned how to manipulate color and elevation to highlight features of the terrain and surface of the 
+area I’m interested in to better understand features of the landscape as well as the way people made use of the land. I learned how to use georeferencing to overlap an image of an old map with the new DEM in order to observe changes in the surface and terrain over centuries. 
+</p>
 														<p>I made this map following a lab assignment. include relevant information from your assignment here.</p>
 						
 						</div>
