--- a/DEM.html
+++ b/DEM.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Britta Ricker</title>
+		<title>Nichita's Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -85,8 +85,8 @@ area I’m interested in to better understand features of the landscape as well 
 								<h2>Follow</h2>
 								<ul class="icons">
 									
-									<li><a href="https://github.com/bricker0" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
-									<li><a href="https://www.linkedin.com/in/brittaricker/" class="icon brands style2 fa-linkedin"><span class="label">500px</span></a></li>
+									<li><a href="https://github.com/nichita-toma" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
+									
 									<li><a href="#" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
 								</ul>
 							</section>
