--- a/choropleth.html
+++ b/choropleth.html
@@ -46,7 +46,7 @@
 
 							<!-- Logo -->
 								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">Phantom</span>
+									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">Nichita's Portfolio</span>
 								</a>
 
 							<!-- Nav -->
@@ -244,8 +244,8 @@ The data, collected by the UN for Sustainable Development Goal 2.1, aims to end 
 								<h2>Follow</h2>
 								<ul class="icons">
 									
-									<li><a href="https://github.com/bricker0" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
-									<li><a href="https://www.linkedin.com/in/brittaricker/" class="icon brands style2 fa-linkedin"><span class="label">500px</span></a></li>
+									<li><a href="https://github.com/nichita-toma" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
+									
 									<li><a href="#" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
 								</ul>
 							</section>
