--- a/DEM.html
+++ b/DEM.html
@@ -22,7 +22,7 @@
 
 							<!-- Logo -->
 								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">Britta Ricker</span>
+									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">Nichita's Portfolio</span>
 								</a>
 
 							<!-- Nav -->
