--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Britta Ricker Website</title>
+		<title>Nichita's Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -55,6 +55,7 @@
 							<header>
 								<h1>This is a collection of proejects I made <br />
 								as part of my introduction to GIS course</h1>
+								<h2>General info:</h2>
 								<p>GIS stands for Geographical Information System and is a type of technology used for integrating 
 									all types of data into maps to reveal certain things about a specific place.
 									This computer system is part of a bigger study called Geographical Information Science,
@@ -64,7 +65,11 @@
 									become crucial in mitigating climate change, or as mapping areas at risk of extreme climate phenomena becomes
 									a necessity for survival. GIS is ubiquitous in today’s world and is an integral part of our lives, 
 									whether through its crucial role in navigation, food deliveries, weather forecasts, running trackers. </p>
+								<p></p>
+								<h2>About this course:</h2>
+								<p>This webpage was made to showcase different maps I made as part of my introductionary course to GIS, where I explore different practical ways of using GIS software to assess certain aspects of geographical space, such as the potential of sequestering CO2 in the biomass and landmass of the area of nature where I live. Earth Observation Data through Sentinel 2 images was integral in this course, as it provided me with the data for important investigations such as the way land is used in my hometown, or for making sense of the elevation of the landscape and urban sprawl of an important region in the port of Rotterdam. As part of this course, I also collected my own primary data with ArcGIS, as part of my attempt to map out the patterns of locations of political posters in the Utrecht center.  Finally, I gained knowledge into making Choropleth maps that display (also interactively) statistics about food insecurity different countries experience around the world</p>
 
+								<p></p>
 								<p>Click on the different boxes to find out more about my projects</p>
 							</header>
 							<section class="tiles">
