--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
 
 							<!-- Logo -->
 								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">Britta Ricker</span>
+									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">Nichita's Portfolio</span>
 								</a>
 
 							<!-- Nav -->
@@ -52,13 +52,13 @@
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<h1>All about Britta</h1>
-							<span class="image right"><img src="images/profile_1.jpg" alt="" /></span>
+							<h1>All about Nichita</h1>
+							
 							<span class="image left"><img src="images/profile_2.jpg" alt="" /></span>
-														<p>I made this map following a lab assignment. include relevant information from your assignment here.</p>
-						
+														<p>Hey! MY name is Nichita, I'm Romanian born but have been studying in different places in the past few years. At the moment, I study a mix of courses in the domains of Math, Earth & Environment, and Law as part of my Bachelors degree. Thus, as part of my exploration of my fields of study and due to my cruiosity for geography, I took this GIS introductionary course to gain some pracitcal skills about integrating data into maps.</p> 
+					<p></p>
+					<p>This webpage was made to showcase different maps I made as part of my introductionary course to GIS, where I explore different practical ways of using GIS software to assess certain aspects of geographical space, such as the potential of sequestering CO2 in the biomass and landmass of the area of nature where I live. Earth Observation Data through Sentinel 2 images was integral in this course, as it provided me with the data for important investigations such as the way land is used in my hometown, or for making sense of the elevation of the landscape and urban sprawl of an important region in the port of Rotterdam. As part of this course, I also collected my own primary data with ArcGIS, as part of my attempt to map out the patterns of locations of political posters in the Utrecht center.  Finally, I gained knowledge into making Choropleth maps that display (also interactively) statistics about food insecurity different countries experience around the world</p>
 						</div>
-					</div>
 
 				<!-- Footer -->
 					<footer id="footer">
