--- a/landuse.html
+++ b/landuse.html
@@ -68,6 +68,8 @@ The different bands of electromagnetic energy that the satellite receives can be
 Overall, supervised classification better highlights key areas like vegetation and urban sprawl in Bucharest due to control over displayed categories. However, it struggles to distinguish between similar green areas for example between forest and cultivated land, possibly due to labelling or computational errors. Unsupervised maps make water and land hard to distinguish—likely because of surrounding vegetation—and show cities in overly fine detail, making them harder to interpret.
 </p>
 							<span class="image main"><img src="images/Unsupervised_object_based_classification.png" alt="" /></span>
+							<h1>NDVI map</h1>
+							<p>NDVI is a standardized index used to the assess the health and density of vegetation. It is calulcated from the eletrocmagmetic sprctrum data at two specific bands: red and near-infrared. Thus, in this image, the ligher the greem the healthier the vegetation (which also correlates with areas of forests).</p>
 							<span class="image main"><img src="images/NDVI_new.png" alt="" /></span>
 							<h2>Skills acquired:</h2>
 							<p>Through this project, I learned how to upload a satellite image to ArcGIS Pro and how to change its band combination (the colour that corresponds to each features) in order to assess certain aspects of the landscape like vegetation health or urban sprawl. I also learned how to process the image with different types of classifications (supervised/unsupervised & object-based/pixel-based). </p>
